dist_glusternagiosplugins_PYTHON = \
	constants.py \
	check_cluster_status.py \
	check_cluster_vol_usage.py \
	check_remote_host.py \
	check_vol_server.py \
	gluster_host_service_handler.py \
	hostsnmptrapgenerator.py \
	livestatus.py \
	notify_ovirt_engine_handler.py \
	discovery.py \
	config_generator.py \
	servicesnmptrapgenerator.py \
	submit_external_command.py \
	$(NULL)

EXTRA_DIST = \
	__init__.py \
	$(NULL)
